--- a/README
+++ b/README
@@ -27,3 +27,6 @@ Segunda Vuelta
 1.- git add .
 2.- git commit -m "comentario"
 3.- git push origin master
+
+url MOCKUP
+https://jamboard.google.com/d/1BiJUZHIzu4Yde7Sih8ImS-QFsFvTKOw2LE7aFdpN5Kk/viewer?f=2
